Bugfix: Song title for lego song was too long and pushing image to scale down. Broke title in two.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -587,6 +587,7 @@ p.song_paragraph {
     padding: .75rem;
     position: relative;
     line-height: 1;
+    max-width: 80%;
 }
 
 a.song_title {
